--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "novaera",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "16.11.7",
-    "@types/react": "17.0.34",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3",
-    "typescript": "4.4.4"
-  }
+	"name": "novaera-homepage",
+	"version": "1.0.0",
+	"description": "Nova Era's website",
+	"private": true,
+	"license": "MIT",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prettier": "prettier -write"
+	},
+	"author": "Pham Minh Hieu<novaera>",
+	"dependencies": {
+		"@chakra-ui/icons": "^1.1.1",
+		"@chakra-ui/react": "^1.7.1",
+		"@emotion/react": "^11.5.0",
+		"@emotion/styled": "^11.3.0",
+		"framer-motion": "^4.1.17",
+		"next": "12.0.3",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"@types/node": "16.11.7",
+		"@types/react": "17.0.34",
+		"eslint": "7.32.0",
+		"eslint-config-next": "12.0.3",
+		"typescript": "4.4.4"
+	}
 }
