create voxel dog animation

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
 		"framer-motion": "^4.1.17",
 		"next": "12.0.3",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"three": "^0.134.0"
 	},
 	"devDependencies": {
 		"@types/node": "16.11.7",
 		"@types/react": "17.0.34",
+		"@types/three": "^0.134.0",
 		"eslint": "7.32.0",
 		"eslint-config-next": "12.0.3",
 		"typescript": "4.4.4"
